# LuisaCompute

./: .clangd  .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  README.md  bootstrap.py  build_wheels_linux.sh  build_wheels_macos.sh  environment.yml  impl_motion_blur_vk.md  impl_motion_blur_vk_by_ai.md  impl_motion_blur_vk_by_ai_fix.md  impl_motion_blur_vk_by_ai_support_srt.md  pyproject.toml  setup.lua  test_lineno_verification.py  xmake.lua
examples/: CMakeLists.txt  xmake.lua
examples/common/: reference_compare.h
examples/compute/: helloworld.cpp  image_processing.cpp
examples/extension/: cuda_lcub.cpp  dstorage.cpp  dx_supersampling.cpp  fsr3.cpp  path_tracing_clangcxx.cpp  supersampling.cpp
examples/extension/clangcxx_compiler/: host_codegen.cpp  preprocessor.h
examples/gui/: imgui.cpp  mnist.cpp  swapchain.cpp  swapchain_static.cpp  test_mnist.py  win_hdr.cpp
examples/interop/: cuda_dx_interop.cpp  cuda_vk_interop.cpp
examples/rendering/: blackhole.cpp  path_tracing.cpp  path_tracing_camera.cpp  path_tracing_cutout.cpp  path_tracing_hdr.cpp  path_tracing_ir.cpp  path_tracing_nested_callable.cpp  path_tracing_ray_masks.cpp  path_tracing_spectrum.cpp  photon_mapping.cpp  procedural.cpp  sdf_renderer.cpp  sdf_renderer_ir.cpp  shader_toy.cpp  shader_toy_spacex.cpp  shader_visuals_present.cpp  voxel_raytracer.cpp
examples/simulation/: fire_simulation.cpp  game_of_life.cpp  mpm3d.cpp  mpm88.cpp  nbody_simulation.cpp  wave_equation.cpp
src/backends/common/: CMakeLists.txt  cast.h  command_reorder_visitor.h  default_binary_io.cpp  default_binary_io.h  export_version.inl.h  moltenvk_surface.h  moltenvk_surface.mm  oidn_denoiser.cpp  oidn_denoiser.h  rust_device_common.cpp  vulkan_instance.cpp  vulkan_instance.h  vulkan_swapchain.cpp  windows_security_attributes.h  xmake.lua
src/backends/fallback/: CMakeLists.txt  emutls.c  fallback_accel.cpp  fallback_accel.h  fallback_buffer.cpp  fallback_buffer.h  fallback_codegen.cpp  fallback_codegen.h  fallback_command_queue.cpp  fallback_command_queue.h  fallback_curve.cpp  fallback_curve.h  fallback_device.cpp  fallback_device.h  fallback_device_api.cpp  fallback_device_api.h  fallback_embree.h  fallback_mesh.cpp  fallback_motion_instance.cpp  fallback_prim.cpp  fallback_prim.h  fallback_proc_prim.cpp  fallback_shader.cpp  fallback_shader.h  fallback_stream.cpp  fallback_swapchain.cpp  fallback_swapchain.h  fallback_tex_compress.cpp  fallback_tex_compress.inl.h  fallback_texture.cpp  fallback_texture.h  fallback_texture_bc.cpp  xmake.lua
src/backends/hip/: .gitignore  CMakeLists.txt  hip_accel.cpp  hip_accel.h  hip_bindless_array.cpp  hip_bindless_array.h  hip_buffer.cpp  hip_buffer.h  hip_callback_context.h  hip_check.h  hip_command_encoder.cpp  hip_command_encoder.h  hip_device.cpp  hip_device.h  hip_event.cpp  hip_event.h  hip_geometry.h  hip_mesh.cpp  hip_mesh.h  hip_procedural_primitive.cpp  hip_procedural_primitive.h  hip_rt_device_wrapper.hip  hip_rt_wrapper_bitcode_embedded.cpp  hip_rt_wrapper_bitcode_embedded.h  hip_shader.cpp  hip_shader.h  hip_shader_metadata.h  hip_shader_native.cpp  hip_shader_native.h  hip_shader_printer.h  hip_stage_buffer_pool.cpp  hip_stage_buffer_pool.h  hip_stream.cpp  hip_stream.h  hip_swapchain.cpp  hip_swapchain.h  hip_texture.cpp  hip_texture.h
src/backends/vk/: CMakeLists.txt  VulkanBuffer.cpp  VulkanBuffer.h  VulkanDevice.cpp  VulkanDevice.h  VulkanInitializers.hpp  VulkanTools.cpp  VulkanTools.h  bindless_array.cpp  bindless_array.h  blas.cpp  blas.h  buffer.cpp  buffer.h  builtin_kernel.cpp  builtin_kernel.h  compute_shader.cpp  compute_shader.h  default_buffer.h  device.cpp  device.h  event.cpp  event.h  lc_vk_pch.h  log.h  motion_instance.cpp  motion_instance.h  pinned_memory_ext.cpp  pinned_memory_ext.h  primitive_base.h  raster_shader.cpp  raster_shader.h  readback_buffer.h  resource.h  resource_barrier.cpp  resource_barrier.h  rt_shader.cpp  rt_shader.h  serde_type.h  shader.cpp  (+27 more)
src/core/: CMakeLists.txt  basic_types.cpp  binary_file_stream.cpp  dynamic_module.cpp  first_fit.cpp  logging.cpp  managed_ptr.cpp  platform.cpp  pool.cpp  string_scratch.cpp  xmake.lua
src/core/stl/: filesystem.cpp  hash.cpp  memory.cpp
src/ext/volk/: CMakeLists.txt  volk.c  xmake.lua
src/py/: CMakeLists.txt  ast_evaluator.cpp  ast_evaluator.h  export_commands.cpp  export_dlpack.cpp  export_op.cpp  export_runtime.cpp  export_vector2.cpp  export_vector3.cpp  export_vector4.cpp  image_util.cpp  interop.cpp  interop.h  lcapi.cpp  lcpy_pch.h  managed_accel.cpp  managed_bindless.cpp  managed_collector.cpp  managed_device.h  py_stream.cpp  py_stream.h  ref_counter.cpp  xmake.lua
src/py/luisa/: __init__.py  accel.py  astbuilder.py  buffer.py  builtin.py  func.py  image2d.py  image3d.py
src/tests/: CMakeLists.txt  config.h  fp4.h  fp8.h  projection.hpp  reference_image.h  test_ast.cpp  test_ast2ir.cpp  test_ast_to_xir.cpp  test_atomic.cpp  test_atomic_queue.cpp  test_autodiff.cpp  test_autodiff_full.cpp  test_binding_group.cpp  test_binding_group_template.cpp  test_bindless.cpp  test_bindless_buffer.cpp  test_blackhole.cpp  test_buffer_io.cpp  test_builtin_kernel.cpp  test_byte_buffer.cpp  test_callable.cpp  test_constant.cpp  test_context.cpp  test_conv.cpp  test_copy.cpp  test_cpu_callable.cpp  test_cuda_dx_interop.cpp  test_cuda_vk_interop.cpp  test_curve.cpp  test_curve_pbrt.cpp  test_curve_pbrt_diffuse.cpp  test_decoupled_look_back.cpp  test_denoiser.cpp  test_device.h  test_device_debugger.cpp  test_dml.cpp  test_dsl.cpp  test_dsl_mathematic.cpp  test_dsl_multithread.cpp  (+80 more)
src/tests/amd/: xmake.lua
src/tests/clangcxx_compiler/: host_codegen.h  main.cpp  simplecpp.cpp  template.txt  xmake.lua
src/tests/common/: spectrum_data.h  test_main.cpp
src/tests/for_agent/: basic_traits.cpp  basic_types.cpp  binary_file_stream.cpp  binary_io.cpp  clock.cpp  dynamic_module.cpp  first_fit.cpp  logging.cpp  mathematics.cpp  pool.cpp  xmake.lua
src/tests/python/: test-aot.cpp  test-autodiff-clamp.py  (+20 more)
utils/: CMakeLists.txt  embed_codegen.cpp  embed_device_lib.cpp  hip_compile_wrapper.cpp
(+1112 files in other folders)
