[build-system]
requires = ["pybind11", "scikit-build-core>=0.3.2", "ninja"]
build-backend = "scikit_build_core.build"

[project]
name = "luisa-python"
dynamic = ["version"]
description = "A High-Performance Rendering Framework with Layered and Unified Interfaces on Stream Architectures"
readme = "README.md"
authors = [
    { name = "LuisaGroup" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "sourceinspect",
    "numpy",
]
license = { file = "LICENSE" }
keywords = ["luisa", "rendering", "framework", "gpu", "stream", "architecture"]

[project.urls]
Homepage = "https://www.luisa-render.com"
Repository = "https://github.com/LuisaGroup/LuisaCompute"
Issues = "https://github.com/LuisaGroup/LuisaCompute/issues"

[tool.scikit-build]
cmake.version = ">=3.28"
cmake.build-type = "Release"
cmake.args = ["-G Ninja"]
ninja.version = ">=1.11"
ninja.make-fallback = false
sdist.reproducible = false
wheel.expand-macos-universal-tags = true
wheel.packages = []
# this causes CMake referencing a temporarily installed ninja
# build-dir = "build/{wheel_tag}"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "include/luisa/version.h"
regex = '''(?sx)
\#define \s+ LUISA_COMPUTE_VERSION_MAJOR \s+ (?P<major>\d+) .*?
\#define \s+ LUISA_COMPUTE_VERSION_MINOR \s+ (?P<minor>\d+) .*?
\#define \s+ LUISA_COMPUTE_VERSION_PATCH \s+ (?P<patch>\d+) .*?
'''
result = "{major}.{minor}.{patch}"

[tool.scikit-build.cmake.define]
LUISA_COMPUTE_BUILD_TESTS = "OFF"
LUISA_COMPUTE_DOWNLOAD_NVCOMP = "OFF"
LUISA_COMPUTE_USE_SYSTEM_STL = "ON"
