# =============================================================================
# LuisaCompute Tests
# Organized into: unit tests, integration tests
# Uses Boost.UT (single-header) for test framework
# =============================================================================

# --- CTest integration ---
enable_testing()

# Helper: add a standalone test executable, include path, AND register with CTest.
# Usage: luisa_compute_add_test(name source LABELS label1;label2 [ARGS arg1 ...])
# Tests without LABELS compile but are NOT registered with CTest.
function(luisa_compute_add_test name source)
    cmake_parse_arguments(PARSE_ARGV 2 CT "" "" "LABELS;ARGS")
    luisa_compute_add_executable(${name} ${source})
    target_include_directories(${name} PRIVATE ./)
    if (CT_LABELS)
        add_test(NAME ${name} COMMAND ${name} ${CT_ARGS})
        set_tests_properties(${name} PROPERTIES LABELS "${CT_LABELS}")
    endif ()
endfunction()

# =============================================================================
# Unit Tests
# =============================================================================

# --- unit/core: standalone tests (no backend needed, auto-run via CTest) ---
luisa_compute_add_test(test_basic_traits       unit/core/test_basic_traits.cpp       LABELS "unit;unit_core")
luisa_compute_add_test(test_basic_types        unit/core/test_basic_types.cpp        LABELS "unit;unit_core")
luisa_compute_add_test(test_binary_file_stream unit/core/test_binary_file_stream.cpp LABELS "unit;unit_core")
luisa_compute_add_test(test_binary_io          unit/core/test_binary_io.cpp          LABELS "unit;unit_core")
luisa_compute_add_test(test_clock              unit/core/test_clock.cpp              LABELS "unit;unit_core")
luisa_compute_add_test(test_dynamic_module     unit/core/test_dynamic_module.cpp     LABELS "unit;unit_core")
luisa_compute_add_test(test_first_fit          unit/core/test_first_fit.cpp          LABELS "unit;unit_core")
luisa_compute_add_test(test_logging            unit/core/test_logging.cpp            LABELS "unit;unit_core")
luisa_compute_add_test(test_mathematics        unit/core/test_mathematics.cpp        LABELS "unit;unit_core")
luisa_compute_add_test(test_matrix             unit/core/test_matrix.cpp             LABELS "unit;unit_core")
luisa_compute_add_test(test_pool               unit/core/test_pool.cpp               LABELS "unit;unit_core")
luisa_compute_add_test(test_type               unit/core/test_type.cpp               LABELS "unit;unit_core")
luisa_compute_add_test(test_stl_containers     unit/core/test_stl_containers.cpp     LABELS "unit;unit_core")
luisa_compute_add_test(test_hash               unit/core/test_hash.cpp               LABELS "unit;unit_core")
luisa_compute_add_test(test_spin_mutex         unit/core/test_spin_mutex.cpp         LABELS "unit;unit_core")
luisa_compute_add_test(test_fiber              unit/core/test_fiber.cpp              LABELS "unit;unit_core")
luisa_compute_add_test(test_platform_utils     unit/core/test_platform.cpp           LABELS "unit;unit_core")

if (LUISA_COMPUTE_ENABLE_GUI)
endif ()

# --- unit/ast: standalone tests (need backend, NOT auto-run via CTest) ---
luisa_compute_add_test(test_ast             unit/ast/test_ast.cpp)
luisa_compute_add_test(test_ast_basic       unit/ast/test_ast_basic.cpp)
luisa_compute_add_test(test_builtin_kernel  unit/ast/test_builtin_kernel.cpp)
target_include_directories(test_builtin_kernel PRIVATE ${CMAKE_SOURCE_DIR}/src/runtime)
luisa_compute_add_test(test_manual_ast      unit/ast/test_manual_ast.cpp)

# --- unit/dsl: standalone tests (need backend, NOT auto-run via CTest) ---
luisa_compute_add_test(test_binding_group          unit/dsl/test_binding_group.cpp)
luisa_compute_add_test(test_binding_group_template unit/dsl/test_binding_group_template.cpp)
luisa_compute_add_test(test_callable               unit/dsl/test_callable.cpp)
luisa_compute_add_test(test_constant               unit/dsl/test_constant.cpp)
luisa_compute_add_test(test_dsl                    unit/dsl/test_dsl.cpp)
luisa_compute_add_test(test_dsl_sugar              unit/dsl/test_dsl_sugar.cpp)
luisa_compute_add_test(test_dsl_multithread        unit/dsl/test_dsl_multithread.cpp)
luisa_compute_add_test(test_soa                    unit/dsl/test_soa.cpp)
luisa_compute_add_test(test_soa_subview            unit/dsl/test_soa_subview.cpp)
luisa_compute_add_test(test_soa_simple             unit/dsl/test_soa_simple.cpp)
luisa_compute_add_test(test_device_math            unit/dsl/test_device_math.cpp)
luisa_compute_add_test(test_nested_callable         unit/dsl/test_nested_callable.cpp)
luisa_compute_add_test(test_normal_encoding        unit/dsl/test_normal_encoding.cpp)
luisa_compute_add_test(test_calc                   unit/dsl/test_calc.cpp)
luisa_compute_add_test(test_dsl_matrix             unit/dsl/test_matrix.cpp)
luisa_compute_add_test(test_var                    unit/dsl/test_var.cpp)
luisa_compute_add_test(test_polymorphic            unit/dsl/test_polymorphic.cpp)
luisa_compute_add_test(test_dsl_autodiff           unit/dsl/test_autodiff.cpp)

# --- unit/runtime: standalone tests (need backend, NOT auto-run via CTest) ---
luisa_compute_add_test(test_atomic              unit/runtime/test_atomic.cpp)
luisa_compute_add_test(test_atomic_queue        unit/runtime/test_atomic_queue.cpp)
luisa_compute_add_test(test_byte_buffer         unit/runtime/test_byte_buffer.cpp)
luisa_compute_add_test(test_context             unit/runtime/test_context.cpp)
luisa_compute_add_test(test_copy                unit/runtime/test_copy.cpp)
luisa_compute_add_test(test_cpu_callable        unit/runtime/test_cpu_callable.cpp)
luisa_compute_add_test(test_decoupled_look_back unit/runtime/test_decoupled_look_back.cpp)
luisa_compute_add_test(test_matrix_multiply     unit/runtime/test_matrix_multiply.cpp)
luisa_compute_add_test(test_mipmap              unit/runtime/test_mipmap.cpp)
luisa_compute_add_test(test_pinned_mem          unit/runtime/test_pinned_mem.cpp)
luisa_compute_add_test(test_printer             unit/runtime/test_printer.cpp)
luisa_compute_add_test(test_printer_custom_callback unit/runtime/test_printer_custom_callback.cpp)
luisa_compute_add_test(test_sampler             unit/runtime/test_sampler.cpp)
luisa_compute_add_test(test_shared_memory       unit/runtime/test_shared_memory.cpp)
luisa_compute_add_test(test_softmax             unit/runtime/test_softmax.cpp)
if (LUISA_COMPUTE_ENABLE_TENSOR)
    luisa_compute_add_test(test_tensor              unit/runtime/test_tensor.cpp)
endif ()
luisa_compute_add_test(test_texture_compress    unit/runtime/test_texture_compress.cpp)
luisa_compute_add_test(test_texture_io          unit/runtime/test_texture_io.cpp)
luisa_compute_add_test(test_warp                unit/runtime/test_warp.cpp)
luisa_compute_add_test(test_warp_prefix_scan    unit/runtime/test_warp_prefix_scan.cpp)
luisa_compute_add_test(test_buffer_io           unit/runtime/test_buffer_io.cpp)
luisa_compute_add_test(test_buffer              unit/runtime/test_buffer.cpp)
luisa_compute_add_test(test_buffer_view         unit/runtime/test_buffer_view.cpp)
luisa_compute_add_test(test_device_test         unit/runtime/test_device.cpp)
luisa_compute_add_test(test_external_buffer     unit/runtime/test_external_buffer.cpp)
luisa_compute_add_test(test_gemm                unit/runtime/test_gemm.cpp)
luisa_compute_add_test(test_shared_mem          unit/runtime/test_shared_mem.cpp)

# --- unit/xir: standalone tests (no backend needed, auto-run via CTest) ---
luisa_compute_add_test(test_ast_to_xir unit/xir/test_ast_to_xir.cpp LABELS "unit;unit_xir")
luisa_compute_add_test(test_xir_module      unit/xir/test_xir_module.cpp      LABELS "unit;unit_xir")
luisa_compute_add_test(test_xir_builder     unit/xir/test_xir_builder.cpp     LABELS "unit;unit_xir")
luisa_compute_add_test(test_xir_translators unit/xir/test_xir_translators.cpp LABELS "unit;unit_xir")

# =============================================================================
# Integration Tests (require GPU backends, NOT auto-run via CTest)
# Run manually: ./<test_name> <backend>
# =============================================================================

# --- integration/runtime: standalone tests ---
luisa_compute_add_test(test_device_debugger         integration/runtime/test_device_debugger.cpp)
luisa_compute_add_test(test_dstorage                integration/runtime/test_dstorage.cpp)
luisa_compute_add_test(test_dstorage_decompression  integration/runtime/test_dstorage_decompression.cpp)
luisa_compute_add_test(test_procedural               integration/runtime/test_procedural.cpp)
luisa_compute_add_test(test_procedural_callable      integration/runtime/test_procedural_callable.cpp)
luisa_compute_add_test(test_rtx                      integration/runtime/test_rtx.cpp)
luisa_compute_add_test(test_oso_parser               integration/runtime/test_oso_parser.cpp)

if (LUISA_COMPUTE_ENABLE_GUI)
    luisa_compute_add_test(test_bindless               integration/runtime/test_bindless.cpp)
    luisa_compute_add_test(test_bindless_buffer         integration/runtime/test_bindless_buffer.cpp)
    luisa_compute_add_test(test_curve                   integration/runtime/test_curve.cpp)
    luisa_compute_add_test(test_curve_pbrt              integration/runtime/test_curve_pbrt.cpp)
    luisa_compute_add_test(test_curve_pbrt_diffuse      integration/runtime/test_curve_pbrt_diffuse.cpp)
    luisa_compute_add_test(test_denoiser                integration/runtime/test_denoiser.cpp)
    luisa_compute_add_test(test_indirect                integration/runtime/test_indirect.cpp)
    luisa_compute_add_test(test_indirect_rtx            integration/runtime/test_indirect_rtx.cpp)
    luisa_compute_add_test(test_motion_blur             integration/runtime/test_motion_blur.cpp)
    luisa_compute_add_test(test_native_include          integration/runtime/test_native_include.cpp)
    luisa_compute_add_test(test_present                 integration/runtime/test_present.cpp)
    luisa_compute_add_test(test_runtime                 integration/runtime/test_runtime.cpp)
    luisa_compute_add_test(test_select_device           integration/runtime/test_select_device.cpp)
    luisa_compute_add_test(test_texture3d               integration/runtime/test_texture3d.cpp)

    luisa_compute_add_executable(test_transient_resource
            integration/runtime/test_transient_resource.cpp
            integration/runtime/transient_resource_device/managed_first_fit.cpp
            integration/runtime/transient_resource_device/managed_first_fit.h
            integration/runtime/transient_resource_device/transient_resource_device.cpp
            integration/runtime/transient_resource_device/transient_resource_device.h)
    target_include_directories(test_transient_resource PRIVATE ./)
endif ()

# --- integration/runtime: DX-only tests ---
if (LUISA_COMPUTE_ENABLE_DX)
    luisa_compute_add_test(test_raster         integration/runtime/test_raster.cpp         ARGS dx)
    luisa_compute_add_test(test_memory_compact  integration/runtime/test_memory_compact.cpp ARGS dx)
    # test_work_graph disabled: work_graph headers not yet available
    # luisa_compute_add_test(test_work_graph      integration/runtime/test_work_graph.cpp     ARGS dx)
endif ()

# --- integration/runtime: HIP/HIPRT tests (AMD GPU only) ---
if (LUISA_COMPUTE_ENABLE_HIP)
    luisa_compute_add_test(test_hiprt_standalone integration/runtime/test_hiprt_standalone.cpp)
endif ()

# --- integration/ir: standalone tests ---
if (LUISA_COMPUTE_ENABLE_RUST)
    luisa_compute_add_test(test_autodiff        integration/ir/test_autodiff.cpp)
    luisa_compute_add_test(test_autodiff_full    integration/ir/test_autodiff_full.cpp)
    luisa_compute_add_test(test_ast2ir           integration/ir/test_ast2ir.cpp)
    luisa_compute_add_test(test_ast2ir_headless  integration/ir/test_ast2ir_headless.cpp)
    luisa_compute_add_test(test_ast2ir_ir2ast    integration/ir/test_ast2ir_ir2ast.cpp)

    if (LUISA_COMPUTE_ENABLE_GUI)
        luisa_compute_add_executable(test_kernel_ir test_kernel_ir.cpp)
        luisa_compute_add_executable(test_sdf_renderer_ir test_sdf_renderer_ir.cpp)
        luisa_compute_add_executable(test_path_tracing_ir test_path_tracing_ir.cpp)
    endif ()
endif ()
if (LUISA_COMPUTE_ENABLE_GUI)
    luisa_compute_add_executable(test_present test_present.cpp)
    luisa_compute_add_executable(test_runtime test_runtime.cpp)
    luisa_compute_add_executable(test_bindless_buffer test_bindless_buffer.cpp)
endif()
luisa_compute_add_executable(test_helloworld test_helloworld.cpp)
luisa_compute_add_executable(test_type test_type.cpp)
luisa_compute_add_executable(test_byte_buffer test_byte_buffer.cpp)
luisa_compute_add_executable(test_ast test_ast.cpp)
luisa_compute_add_executable(test_binding_group test_binding_group.cpp)
luisa_compute_add_executable(test_binding_group_template test_binding_group_template.cpp)
luisa_compute_add_executable(test_copy test_copy.cpp)
luisa_compute_add_executable(test_constant test_constant.cpp)
luisa_compute_add_executable(test_cpu_callable test_cpu_callable.cpp)
luisa_compute_add_executable(test_decoupled_look_back test_decoupled_look_back.cpp)
luisa_compute_add_executable(test_dsl test_dsl.cpp)
luisa_compute_add_executable(test_dsl_sugar test_dsl_sugar.cpp)
luisa_compute_add_executable(test_dsl_multithread test_dsl_multithread.cpp)
luisa_compute_add_executable(test_dstorage test_dstorage.cpp)
luisa_compute_add_executable(test_dstorage_decompression test_dstorage_decompression.cpp)
luisa_compute_add_executable(test_indirect test_indirect.cpp)
luisa_compute_add_executable(test_indirect_rtx test_indirect_rtx.cpp)
luisa_compute_add_executable(test_device_debugger test_device_debugger.cpp)
luisa_compute_add_executable(test_printer test_printer.cpp)
luisa_compute_add_executable(test_printer_custom_callback test_printer_custom_callback.cpp)
luisa_compute_add_executable(test_callable test_callable.cpp)
luisa_compute_add_executable(test_texture_io test_texture_io.cpp)
luisa_compute_add_executable(test_texture_compress test_texture_compress.cpp)
luisa_compute_add_executable(test_atomic test_atomic.cpp)
luisa_compute_add_executable(test_atomic_queue test_atomic_queue.cpp)
luisa_compute_add_executable(test_shared_memory test_shared_memory.cpp)
luisa_compute_add_executable(test_bindless test_bindless.cpp)
luisa_compute_add_executable(test_sampler test_sampler.cpp)
luisa_compute_add_executable(test_rtx test_rtx.cpp)
luisa_compute_add_executable(test_sdf_renderer test_sdf_renderer.cpp)
luisa_compute_add_executable(test_procedural test_procedural.cpp)
luisa_compute_add_executable(test_procedural_callable test_procedural_callable.cpp)
luisa_compute_add_executable(test_mipmap test_mipmap.cpp)
luisa_compute_add_executable(test_native_include test_native_include.cpp)
luisa_compute_add_executable(test_select_device test_select_device.cpp)
luisa_compute_add_executable(test_soa test_soa.cpp)
luisa_compute_add_executable(test_soa_subview test_soa_subview.cpp)
luisa_compute_add_executable(test_soa_simple test_soa_simple.cpp)
luisa_compute_add_executable(test_dml test_dml.cpp)
luisa_compute_add_executable(test_oso_parser test_oso_parser.cpp)
luisa_compute_add_executable(test_cuda_dx_interop test_cuda_dx_interop.cpp)
luisa_compute_add_executable(test_pinned_mem test_pinned_mem.cpp)
luisa_compute_add_executable(test_warp_prefix_scan test_warp_prefix_scan.cpp)
luisa_compute_add_executable(test_fp8 test_fp8.cpp)
luisa_compute_add_executable(test_fp8_quantization test_fp8_quantization.cpp)
luisa_compute_add_executable(test_fp4 test_fp4.cpp)
luisa_compute_add_executable(test_fp4_quantization test_fp4_quantization.cpp)
luisa_compute_add_executable(test_image_processing test_image_processing.cpp)
luisa_compute_add_executable(test_wave_equation test_wave_equation.cpp)
luisa_compute_add_executable(test_nbody_simulation test_nbody_simulation.cpp)
luisa_compute_add_executable(test_fire_simulation test_fire_simulation.cpp)
luisa_compute_add_executable(test_voxel_raytracer test_voxel_raytracer.cpp)
luisa_compute_add_executable(test_blackhole test_blackhole.cpp)

# XIR tests
luisa_compute_add_executable(test_ast_to_xir test_ast_to_xir.cpp)

if (LUISA_COMPUTE_ENABLE_CLANG_CXX)
    luisa_compute_add_executable(clangcxx_compiler clangcxx_compiler.cpp)
    luisa_compute_add_executable(test_clang_cxx test_clang_cxx.cpp)
    luisa_compute_add_executable(test_path_tracing_clangcxx test_path_tracing_clangcxx.cpp)
endif ()

if (LUISA_COMPUTE_ENABLE_GUI)
    luisa_compute_add_executable(test_swapchain test_swapchain.cpp)
    luisa_compute_add_executable(test_swapchain_static test_swapchain_static.cpp)
    luisa_compute_add_executable(test_game_of_life test_game_of_life.cpp)
    luisa_compute_add_executable(test_photon_mapping test_photon_mapping.cpp)
    luisa_compute_add_executable(test_raster test_raster.cpp)
    luisa_compute_add_executable(test_shader_toy test_shader_toy.cpp)
    luisa_compute_add_executable(test_shader_toy_spacex test_shader_toy_spacex.cpp)
    luisa_compute_add_executable(test_shader_visuals_present test_shader_visuals_present.cpp)
    luisa_compute_add_executable(test_path_tracing test_path_tracing.cpp)
    luisa_compute_add_executable(test_path_tracing_ray_masks test_path_tracing_ray_masks.cpp)
    luisa_compute_add_executable(test_path_tracing_hdr test_path_tracing_hdr.cpp)
    luisa_compute_add_executable(test_path_tracing_camera test_path_tracing_camera.cpp)
    luisa_compute_add_executable(test_path_tracing_nested_callable test_path_tracing_nested_callable.cpp)
    luisa_compute_add_executable(test_denoiser test_denoiser.cpp)
    luisa_compute_add_executable(test_path_tracing_cutout test_path_tracing_cutout.cpp)
    luisa_compute_add_executable(test_curve test_curve.cpp)
    luisa_compute_add_executable(test_curve_pbrt test_curve_pbrt.cpp)
    luisa_compute_add_executable(test_curve_pbrt_diffuse test_curve_pbrt_diffuse.cpp)
    luisa_compute_add_executable(test_normal_encoding test_normal_encoding.cpp)
    luisa_compute_add_executable(test_mpm88 test_mpm88.cpp)
    luisa_compute_add_executable(test_mpm3d test_mpm3d.cpp)
    luisa_compute_add_executable(test_texture3d test_texture3d.cpp)
    luisa_compute_add_executable(test_imgui test_imgui.cpp)
    luisa_compute_add_executable(test_motion_blur test_motion_blur.cpp)
endif ()

if (LUISA_COMPUTE_ENABLE_CUDA AND LUISA_COMPUTE_ENABLE_CUDA_EXT_LCUB)
    find_package(CUDAToolkit QUIET)
    if (CUDAToolkit_FOUND)
        luisa_compute_add_executable(test_cuda_lcub test_cuda_lcub.cpp)
        target_link_libraries(test_cuda_lcub PUBLIC CUDA::cudart CUDA::cuda_driver)
    endif ()
endif ()

# GUI interaction with wxWidgets
option(LUISA_COMPUTE_TEST_WX_INTEROP "Build wxWidgets-interoperability tests." ON)
if (LUISA_COMPUTE_TEST_WX_INTEROP)
    find_package(wxWidgets COMPONENTS core base)
    if (wxWidgets_FOUND)
        include(${wxWidgets_USE_FILE})
        message(STATUS "Found wxWidgets: ${wxWidgets_INCLUDE_DIRS}")

        if (UNIX AND NOT APPLE)
            foreach (lib ${wxWidgets_LIBRARIES})
                if (lib MATCHES ".*wx_gtk4.*")
                    set(LUISA_REQUIRED_GTK_LIB gtk4)
                elseif (lib MATCHES ".*wx_gtk3.*")
                    set(LUISA_REQUIRED_GTK_LIB gtk+-3.0)
                elseif (lib MATCHES ".*wx_gtk2.*")
                    set(LUISA_REQUIRED_GTK_LIB gtk+-2.0)
                endif ()
            endforeach ()
        endif ()

        if (LUISA_REQUIRED_GTK_LIB)
            find_package(PkgConfig)

            if (PkgConfig_FOUND)
                pkg_check_modules(GTK ${LUISA_REQUIRED_GTK_LIB})
            endif ()

            if (GTK_FOUND)
                message(STATUS "Found GTK: ${GTK_INCLUDE_DIRS}")
            endif ()
        endif ()

        if (NOT LUISA_REQUIRED_GTK_LIB OR GTK_FOUND)
            add_library(luisa-compute-gui-wx INTERFACE)
            target_include_directories(luisa-compute-gui-wx INTERFACE
                    ${GTK_INCLUDE_DIRS}
                    ${wxWidgets_INCLUDE_DIRS})
            target_link_libraries(luisa-compute-gui-wx INTERFACE
                    ${GTK_LIBRARIES}
                    ${wxWidgets_LIBRARIES})

            # demos using wxWidgets
            luisa_compute_add_executable(test_swapchain_wx test_swapchain_wx.cpp)
            target_link_libraries(test_swapchain_wx PRIVATE luisa-compute-gui-wx)
        endif ()
    endif ()
endif ()

# GUI interaction with Qt
option(LUISA_COMPUTE_TEST_QT_INTEROP "Build Qt-interoperability tests." ON)
if (LUISA_COMPUTE_TEST_QT_INTEROP)
    if (WIN32 AND NOT MSVC AND CMAKE_CXX_COMPILER_ID MATCHES "Clang")
        # FIXME: Qt adds the invalid flags -Zc:__cplusplus and -permissive- to clang
        message(WARNING "Clang has trouble with Qt on Windows. The Qt example will not be built.")
    else ()
        find_package(Qt6 COMPONENTS Widgets Core Gui QUIET CONFIG)
        if (Qt6_FOUND AND APPLE)
            try_compile(LUISA_COMPUTE_HAS_AGL
                    SOURCE_FROM_CONTENT "try_agl.cpp" "int main() {}"
                    LINK_LIBRARIES "-framework AGL")
            if (NOT LUISA_COMPUTE_HAS_AGL)
                message(WARNING "Found Qt6 but could not find AGL framework. Qt GUI tests will not be built.")
                set(Qt6_FOUND OFF)
            endif ()
        endif ()
        if (Qt6_FOUND AND TARGET Qt::Widgets AND TARGET Qt::Core AND TARGET Qt::Gui AND TARGET Qt::GuiPrivate)
            luisa_compute_add_executable(test_swapchain_qt test_swapchain_qt.cpp)
            target_link_libraries(test_swapchain_qt PRIVATE Qt::Widgets Qt::Core Qt::Gui Qt::GuiPrivate)
        endif ()

    endif ()
endif ()
